--- a/index2.html
+++ b/index2.html
@@ -6,6 +6,9 @@
     <title>skill section</title>
 </head>
 <body>
-    
+    <h3>hi bro</h3>
+    <h3>hi bro</h3>
+    <h3>hi bro</h3>
+    <h3>hi bro</h3>
 </body>
 </html>
