done changes in text

--- a/footer.html
+++ b/footer.html
@@ -14,5 +14,6 @@
     <h6>fiufifu</h6>
     <h6>fiufifu</h6>
     <h6>hi i m the software developer</h6>
+    <h5>rejrjrjrrjd</h5>
 </body>
 </html>
