changes in styel

--- a/footer.html
+++ b/footer.html
@@ -3,17 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>footer section</title>
 </head>
 <body>
+    <h5>djdfhfhf</h5>
     <h5>hiiii</h5>
+    <h5>hirhjrjrjhiii</h5>
+    <h5>hidhfdhfhfhiii</h5>
     <h5>hiiii</h5>
-    <h5>hiiii</h5>
-    <h5>hiiii</h5>
-    <h5>hiiii</h5>
+    <h6>fiufdjfjfjfjifu</h6>
     <h6>fiufifu</h6>
-    <h6>fiufifu</h6>
-    <h6>hi i m the software developer</h6>
-    <h5>rejrjrjrrjd</h5>
+    <h6>hi i m the sofdjfjfjfjare developer</h6>
+    <h6>hi i m the sofdjfjfjfjare developer</h6>
+    <h6>hi i m the sofdjfjfjfjare developer</h6>
+    
 </body>
 </html>
