--- a/index.html
+++ b/index.html
@@ -3,16 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>portfolio</title>
+    <title>index</title>
 </head>
 <body>
-    <h1>hii this is my portfolio</h1>
-    <h1>hii this is my portfolio</h1>
-    <h1>hii this is my portfolio</h1>
-    <h1>hii this is my portfolio</h1>
-    <h1>hii this is my portfolio</h1>
-    <h1>hii this is my portfolio</h1>
-    <h1>hii this is my portfolio</h1>
-    
+    <h3>hi i m index</h3>
+    <h3>hi i m index</h3>
+    <h3>hi i m index</h3>
+    <h3>hi i m index</h3>
+    <h3>hi i m index</h3>
 </body>
 </html>
