done some changes

--- a/contact.html
+++ b/contact.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>contact</title>
+    <title>Document35353</title>
 </head>
 <body>
-    <h6>hi i m the contact section </h6>
-    <h6>hi i m the contact section </h6>
-    <h6>hi i m the contact section </h6>
-    <h6>hi i m the contact section </h6>
-    <h6>hi i m the contact section </h6>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic ipsam natus aliquam sit fugiat dolore provident ea exercitationem temporibus excepturi sint, porro quo deleniti officiis explicabo libero fugit esse molestias?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic ipsam natus aliquam sit fugiat dolore provident ea exercitationem temporibus excepturi sint, porro quo deleniti officiis explicabo libero fugit esse molestias?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic ipsam natus aliquam sit fugiat dolore provident ea exercitationem temporibus excepturi sint, porro quo deleniti officiis explicabo libero fugit esse molestias?</p>
+    
 </body>
 </html>
