--- a/footer.html
+++ b/footer.html
@@ -3,19 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>footer section</title>
+    <title>footerdjfdjfdjf section</title>
 </head>
 <body>
-    <h5>djdfhfhf</h5>
-    <h5>hiiii</h5>
-    <h5>hirhjrjrjhiii</h5>
-    <h5>hidhfdhfhfhiii</h5>
-    <h5>hiiii</h5>
-    <h6>fiufdjfjfjfjifu</h6>
+    
     <h6>fiufifu</h6>
-    <h6>hi i m the sofdjfjfjfjare developer</h6>
-    <h6>hi i m the sofdjfjfjfjare developer</h6>
-    <h6>hi i m the sofdjfjfjfjare developer</h6>
+    <h6>hi i m the sofdjfjfjfjare developerfjfjfjfjfjf</h6>
+    <h6>hi i m the sofdjfjer</h6>
+    <h6>hi i m the sofre developer</h6>
     
 </body>
 </html>
