done some changes

--- a/contact.html
+++ b/contact.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document35353</title>
+    <title>Docdjfdmjffdjument</title>
 </head>
 <body>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic ipsam natus aliquam sit fugiat dolore provident ea exercitationem temporibus excepturi sint, porro quo deleniti officiis explicabo libero fugit esse molestias?</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic ipsam natus aliquam sit fugiat dolore provident ea exercitationem temporibus excepturi sint, porro quo deleniti officiis explicabo libero fugit esse molestias?</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic ipsam natus aliquam sit fugiat dolore provident ea exercitationem temporibus excepturi sint, porro quo deleniti officiis explicabo libero fugit esse molestias?</p>
+    <h1>djdjdj</h1>
+    <h1>djdjdj</h1>
+    <h1>djdjdj</h1>
+    <h1>djdjdj</h1>
+    <h1>djdjdj</h1>
+    <h1>djdjdj</h1>
     
 </body>
 </html>
