--- a/footer.html
+++ b/footer.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>footerdjfdjfdjf section</title>
+    <title>Document</title>
 </head>
 <body>
-    
-    <h6>fiufifu</h6>
-    <h6>hi i m the sofdjfjfjfjare developerfjfjfjfjfjf</h6>
-    <h6>hi i m the sofdjfjer</h6>
-    <h6>hi i m the sofre developer</h6>
+    <h5>fdjfjfjfjh</h5>
+    <h5>fdjfjfjfjh</h5>
+    <h5>fdjfjfjfjh</h5>
+    <h5>fdjfjfjfjh</h5>
+    <h5>fdjfjfjfjh</h5>
     
 </body>
 </html>
