--- a/index2.html
+++ b/index2.html
@@ -3,14 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>skill section</title>
+    <title>Documriurujrujrjent</title>
 </head>
 <body>
-    <h3>hi bro</h3>
-    <h3>hi bro</h3>
-    <h3>hi bro</h3>
-    <h3>hi bro</h3>
-    <h3>hi bro</h3>
-    <h3>hi bro</h3>
+    <h4>fhjfhjfhjfhfh</h4>
+    
 </body>
 </html>
